--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ mysql-connector-python>=8.0.0
 python-dotenv>=1.0.0
 requests>=2.31.0
 beautifulsoup4>=4.12.0
-selenium>=4.10.0
-webdriver-manager>=4.0.0
 google-generativeai>=0.3.0
 lxml>=4.9.0
+eventlet>=0.33.0
