--- a/Dockerfile.laravel
+++ b/Dockerfile.laravel
@@ -13,12 +13,15 @@ RUN apt-get update && apt-get install -y \
     libxml2-dev \
     zip \
     unzip \
-    libzip-dev
+    libzip-dev \
+    # Limpeza para reduzir tamanho da imagem
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Limpa cache
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+# --- CORREÇÃO: Instala a extensão do Redis via PECL ---
+RUN pecl install redis \
+    && docker-php-ext-enable redis
 
-# Instala extensões do PHP
+# Instala extensões nativas do PHP
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
 
 # Instala o Composer
