--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -4,24 +4,29 @@ FROM python:3.10-slim
 # Define a pasta de trabalho
 WORKDIR /app
 
-# Instala Chrome e dependências do sistema
+# Instala dependências do sistema, Chrome e o Cliente MySQL (mysqldump)
 RUN apt-get update && apt-get install -y \
     wget \
     gnupg \
     unzip \
     default-libmysqlclient-dev \
+    default-mysql-client \
     gcc \
-    && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
-    && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list' \
+    # 1. Baixa a chave e salva no chaveiro do sistema
+    && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/google-chrome-keyring.gpg \
+    # 2. Adiciona o repositório apontando para a chave correta
+    && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/google-chrome-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
+    # 3. Atualiza e Instala o Chrome
     && apt-get update \
     && apt-get install -y google-chrome-stable \
+    # 4. Limpeza
     && rm -rf /var/lib/apt/lists/*
 
 # Instala as bibliotecas do requirements.txt
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copia todo o projeto Laravel + Python para dentro do container
+# Copia todo o projeto
 COPY . .
 
 # Comando padrão
