--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   # --- 1. O SITE (LARAVEL + PHP) ---
   app:
@@ -10,6 +11,9 @@ services:
     working_dir: /var/www
     volumes:
       - .:/var/www
+    environment:
+      # Passa o DSN do Sentry para o Laravel
+      - SENTRY_LARAVEL_DSN=${SENTRY_LARAVEL_DSN}
     networks:
       - foconopreco-network
     secrets:
@@ -34,12 +38,10 @@ services:
   db:
     image: mysql:8.0
     container_name: foconopreco_db
-    # COMANDO PARA GARANTIR UTF-8
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: ${DB_DATABASE}
-      # Usa _FILE para ler do secret montado
       MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
       MYSQL_PASSWORD_FILE: /run/secrets/db_password
       MYSQL_USER: ${DB_USERNAME}
@@ -66,7 +68,6 @@ services:
     environment:
       PMA_HOST: db
       PMA_USER: root
-      # Usa _FILE para ler a senha do root automaticamente
       PMA_PASSWORD_FILE: /run/secrets/db_root_password
       UPLOAD_LIMIT: 64M
     ports:
@@ -95,6 +96,7 @@ services:
 
   # --- 6. WORKERS CELERY (PROCESSADORES PESADOS) ---
   
+  # Worker de Coleta de Preços (Scraping)
   worker_scrape:
     build:
       context: .
@@ -107,6 +109,8 @@ services:
     environment:
       - DB_HOST=db
       - REDIS_URL=redis://redis:6379
+      # Monitoramento Sentry
+      - SENTRY_DSN=${SENTRY_LARAVEL_DSN}
     depends_on:
       db:
         condition: service_healthy
@@ -118,6 +122,7 @@ services:
     secrets:
       - db_password
 
+  # Worker de IA (Geração de Texto/Análise)
   worker_ia:
     build:
       context: .
@@ -130,6 +135,9 @@ services:
     environment:
       - DB_HOST=db
       - REDIS_URL=redis://redis:6379
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      # Monitoramento Sentry
+      - SENTRY_DSN=${SENTRY_LARAVEL_DSN}
     depends_on:
       db:
         condition: service_healthy
@@ -142,6 +150,7 @@ services:
       - db_password
       - gemini_api_key
 
+  # Worker de Conteúdo (Blog/SEO)
   worker_conteudo:
     build:
       context: .
@@ -154,6 +163,9 @@ services:
     environment:
       - DB_HOST=db
       - REDIS_URL=redis://redis:6379
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      # Monitoramento Sentry
+      - SENTRY_DSN=${SENTRY_LARAVEL_DSN}
     depends_on:
       db:
         condition: service_healthy
@@ -181,6 +193,7 @@ services:
       - PYTHONPATH=/app
       - DB_HOST=db
       - REDIS_URL=redis://redis:6379
+      - SENTRY_DSN=${SENTRY_LARAVEL_DSN}
     depends_on:
       db:
         condition: service_healthy
@@ -205,6 +218,7 @@ services:
       - PYTHONPATH=/app
       - DB_HOST=db
       - REDIS_URL=redis://redis:6379
+      - SENTRY_DSN=${SENTRY_LARAVEL_DSN}
     depends_on:
       db:
         condition: service_healthy
@@ -229,6 +243,7 @@ services:
       - PYTHONPATH=/app
       - DB_HOST=db
       - REDIS_URL=redis://redis:6379
+      - SENTRY_DSN=${SENTRY_LARAVEL_DSN}
     depends_on:
       db:
         condition: service_healthy
@@ -253,6 +268,7 @@ services:
       - PYTHONPATH=/app
       - DB_HOST=db
       - REDIS_URL=redis://redis:6379
+      - SENTRY_DSN=${SENTRY_LARAVEL_DSN}
     depends_on:
       db:
         condition: service_healthy
@@ -277,6 +293,7 @@ services:
       - PYTHONPATH=/app
       - DB_HOST=db
       - REDIS_URL=redis://redis:6379
+      - SENTRY_DSN=${SENTRY_LARAVEL_DSN}
     depends_on:
       db:
         condition: service_healthy
@@ -301,6 +318,7 @@ services:
       - PYTHONPATH=/app
       - DB_HOST=db
       - REDIS_URL=redis://redis:6379
+      - SENTRY_DSN=${SENTRY_LARAVEL_DSN}
     depends_on:
       db:
         condition: service_healthy
@@ -324,6 +342,7 @@ services:
     env_file: .env
     environment:
       - DB_HOST=db
+      - SENTRY_DSN=${SENTRY_LARAVEL_DSN}
     depends_on:
       db:
         condition: service_healthy
@@ -333,6 +352,83 @@ services:
     secrets:
       - db_password
 
+
+
+
+# --- STACK DE MONITORAMENTO ---
+
+  # 1. PROMETHEUS (Coletor de Métricas)
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: foconopreco_prometheus
+    restart: unless-stopped
+    volumes:
+      # Monta o arquivo de configuração que criamos
+      - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      # Volume persistente para não perder o histórico se reiniciar
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    ports:
+      - "9090:9090"
+    networks:
+      - foconopreco-network
+
+  # 2. GRAFANA (Visualização)
+  grafana:
+    image: grafana/grafana:latest
+    container_name: foconopreco_grafana
+    restart: unless-stopped
+    volumes:
+      # Salva usuários e dashboards criados
+      - grafana_data:/var/lib/grafana
+    environment:
+      # Senha inicial (troque no primeiro login ou use Secrets para produção real)
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    networks:
+      - foconopreco-network
+
+  # 3. REDIS EXPORTER (Tradutor do Redis)
+  redis-exporter:
+    image: oliver006/redis_exporter
+    container_name: foconopreco_redis_exporter
+    restart: unless-stopped
+    environment:
+      - REDIS_ADDR=redis://redis:6379
+    depends_on:
+      - redis
+    networks:
+      - foconopreco-network
+
+  # 4. cADVISOR (Monitor de Hardware/Containers)
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:v0.47.2
+    container_name: foconopreco_cadvisor
+    restart: unless-stopped
+    privileged: true
+    # Volumes necessários para ler dados do Host (Docker Desktop/Linux)
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    devices:
+      - /dev/kmsg
+    ports:
+      - "8081:8080"
+    networks:
+      - foconopreco-network
+
 # --- DECLARAÇÃO GLOBAL DOS SECRETS ---
 networks:
   foconopreco-network:
@@ -341,11 +437,17 @@ networks:
 volumes:
   dbdata:
     driver: local
+  prometheus_data:
+    driver: local
+  grafana_data:
+    driver: local
 
 secrets:
   db_password:
     file: ./secrets/db_password.txt
   db_root_password:
     file: ./secrets/db_root_password.txt
-  gemini_api_key:      
+  gemini_api_key:       
     file: ./secrets/gemini_api_key.txt
+  
+
