--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@sentry/browser": "^10.27.0"
     }
 }
