auditoria ultima fase

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
+# CORREÇÃO DE SEGURANÇA: Debug desligado por padrão no exemplo
+APP_DEBUG=false
 APP_URL=http://localhost
 
 APP_LOCALE=en
